Added vert and frag shader and custom build commands to cmake to auto compile shaders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,49 @@ add_executable(FirstVulkanApp ${CLEAN_SOURCE_FILES})
 #Link Vulkan
 find_package(Vulkan REQUIRED)
 target_link_libraries(FirstVulkanApp PRIVATE Vulkan::Vulkan)
+
+
+#Shader compilation
+find_program(
+    GLSLC_EXECUTABLE
+    NAMES glslc
+    HINTS "$ENV{VULKAN_SDK}/bin"
+    REQUIRED
+    DOC "Path to the GLSL to SPIR-V compiler"
+)
+message(STATUS "Found glslc: ${GLSLC_EXECUTABLE}")
+
+#Define shader files
+file(GLOB_RECURSE SHADER_SOURCES
+    "${CMAKE_SOURCE_DIR}/Vulkan/Shaders/*.vert"
+    "${CMAKE_SOURCE_DIR}/Vulkan/Shaders/*.frag"
+)
+message(STATUS "--- Found Shader Files ---")
+foreach(FILE ${SHADER_SOURCES})
+    message(STATUS "  ${FILE}")
+endforeach()
+message(STATUS "------------------------------------")
+
+#Get list of all the full paths of all the compiled .spv files
+set(SPIRV_OUTPUTS "")
+foreach(SHADER_SRC ${SHADER_SOURCES})
+    get_filename_component(SHADER_FILENAME ${SHADER_SRC} NAME)
+    set(SHADER_SPV "${PROJECT_BINARY_DIR}/${SHADER_FILENAME}.spv")
+    list(APPEND SPIRV_OUTPUTS ${SHADER_SPV})
+
+    #Add custom build command for this shader
+    add_custom_command(
+        OUTPUT ${SHADER_SPV}
+        COMMAND ${GLSLC_EXECUTABLE} ${SHADER_SRC} -o ${SHADER_SPV}
+        DEPENDS ${SHADER_SRC}
+        COMMENT "Compiling ${SHADER_SRC} to ${SHADER_SPV}"
+    )
+endforeach()
+
+#Create a phony target that depends on all the compiled shaders then add it to the executable
+add_custom_target(
+    Shaders
+    DEPENDS ${SPIRV_OUTPUTS}
+)
+
+add_dependencies(FirstVulkanApp Shaders)
